DirectX Empty Project Initialisation

--- a/VEIR/VEIR.vcxproj
+++ b/VEIR/VEIR.vcxproj
@@ -139,6 +139,15 @@
       <Project>{61b333c2-c4f7-4cc1-a9bf-83f6d95588eb}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="VEIR.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="eti.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
