--- a/VEIR/VEIR.vcxproj
+++ b/VEIR/VEIR.vcxproj
@@ -127,6 +127,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="RobotComponent.cpp" />
+    <ClCompile Include="RobotObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DirectXTK\DirectXTK_Desktop_2015.vcxproj">
@@ -141,6 +143,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
+    <ClInclude Include="RobotComponent.h" />
+    <ClInclude Include="RobotObject.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="VEIR.rc" />
