--- a/VEIR/VEIR.vcxproj.filters
+++ b/VEIR/VEIR.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="RobotComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RobotEffectFactory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RobotComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RobotEffectFactory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
