--- a/VEIR/VEIR.vcxproj
+++ b/VEIR/VEIR.vcxproj
@@ -129,6 +129,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="RobotComponent.cpp" />
     <ClCompile Include="RobotEffectFactory.cpp" />
+    <ClCompile Include="RobotMatrix.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DirectXTK\DirectXTK_Desktop_2015.vcxproj">
@@ -145,12 +146,14 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="RobotComponent.h" />
     <ClInclude Include="RobotEffectFactory.h" />
+    <ClInclude Include="RobotMatrix.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="VEIR.rc" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="eti.ico" />
+    <Image Include="Font.dds" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
